Reward And Recognition System 2.0/force-app/main/default/objects/Received_Feedback__c/Received_Feedback__c.object-meta.xml
<CustomObject>
    <label>Received Feedback</label>
    <nameField>
        <displayFormat>EF-{0000}</displayFormat>
        <label>Received Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Received Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>