Reward And Recognition System 2.0/force-app/main/default/objects/Received_Feedback__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Received Feedbacks</relationshipLabel>
    <relationshipName>Received_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>