Reward And Recognition System 2.0/force-app/main/default/objects/Received_Feedback__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Received Feedbacks</relationshipLabel>
    <relationshipName>Received_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>