Reward And Recognition System 2.0/force-app/main/default/objects/Received_Feedback__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quarter</label>
    <referenceTo>Quarter__c</referenceTo>
    <relationshipLabel>Received Feedbacks</relationshipLabel>
    <relationshipName>Received_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>