Reward And Recognition System 2.0/force-app/main/default/objects/Received_Feedback__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Category</label>
    <referenceTo>Sub_Category__c</referenceTo>
    <relationshipLabel>Received Feedbacks</relationshipLabel>
    <relationshipName>Received_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>